--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/XsdImporterForm.xaml
@@ -2,13 +2,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:viennaaddin="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
-    Height="500" Width="516" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="XML Schema Importer Wizard" FontSize="11">
-    <DockPanel Background="#FFD4D0C8">
+    Height="500" Width="464" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="XML Schema Importer Wizard" FontSize="11">
+    <DockPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="5,5,5,5">
             <Button HorizontalAlignment="Left" Height="23" Name="buttonImport" Width="175" Click="buttonImport_Click">_Import XML Schemas</Button>
             <Button HorizontalAlignment="Left" Height="23" Name="buttonClose" Width="75" Margin="30,0,0,0" Click="buttonClose_Click">_Close</Button>
         </StackPanel>
-        <TextBox DockPanel.Dock="Bottom" Height="66" Margin="22,5,5,0" Name="textboxStatus" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap" Background="#FFD4D0C8"/>
+        <TextBox DockPanel.Dock="Bottom" Height="66" Margin="22,5,5,0" Name="textboxStatus" IsReadOnly="True" IsUndoEnabled="False" TextWrapping="Wrap"/>
         <Label DockPanel.Dock="Bottom" Name="label2" Margin="22,5,5,0" Height="23"  HorizontalAlignment="Left">Status:</Label>
         <TabControl Name="tabControl1" TabStripPlacement="Left" Margin="5,5,5,0">
             <TabItem Name="tabEbInterface" Header="ebInterface">
@@ -18,11 +18,13 @@
                 <TabItem.Content>
                     <DockPanel>
                         <Label DockPanel.Dock="Top" Height="23" Name="label12">Select ebInterface Schema:</Label>
-                        <viennaaddin:FileSelector Name="mappedSchemaFileSelector" DockPanel.Dock="Top" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" FileName="{Binding Path=Model.MappedSchemaFile}"/>
+                        <viennaaddin:FileSelector Name="mappedSchemaFileSelector" DockPanel.Dock="Top" Height="21" Width="{Binding}" Margin="5,0,5,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd"/>
                         <StackPanel Name="mappedSchemaFileSelectorPanel" DockPanel.Dock="Top" VerticalAlignment="Stretch" Margin="5,0,5,0" />
                         <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
-                        <Label DockPanel.Dock="Top" Name="label3" Height="23">Select mapping files:</Label>
-                            </StackPanel>
+                            <Label DockPanel.Dock="Top" Name="label3" Height="23">Select mapping files:</Label>
+                            <Button Click="Add_Click" Padding="3,0">+</Button>
+                            <Button Click="RemoveSelection_Click" Padding="4,0">-</Button>
+                        </StackPanel>
                         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
                             <Label Height="23" Width="150">Qualifier:</Label>
                             <TextBox Name="qualifierTextBox" Width="305">ebInterface</TextBox>
@@ -43,18 +45,14 @@
                             <Label Height="23" Width="150">DOC Library Name:</Label>
                             <TextBox Name="docLibraryNameTextBox" Width="305">ebInterface Invoice</TextBox>
                         </StackPanel>
-                        <Border BorderThickness="1" BorderBrush="Gray" Margin="5,0,5,0">
-                            <ListBox BorderThickness="0" ItemsSource="{Binding Path=Model.MappingFiles, Mode=TwoWay}" Name="mappingFilesListBox" Margin="0,0,0,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
-                               <ListBox.ItemTemplate>
-                                    <DataTemplate>
-                                        <StackPanel Orientation="Horizontal">
-                                            <viennaaddin:FileSelector FileName="{Binding Path=File, Mode=TwoWay}" Margin="-2,0,5,3" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" />
-                                            <Button Tag="{Binding Path=File}" DockPanel.Dock="Right" Name="RemoveSelection" Click="RemoveSelection_Click"> - </Button>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ListBox.ItemTemplate>
-                            </ListBox>
-                        </Border>
+                        <ListBox ItemsSource="{Binding Path=Model.MappingFiles}" Name="mappingFilesListBox" Margin="5,0,5,0" SelectionMode="Single" />
+<!--                       <ListBox ItemsSource="{Binding Path=Model.MappingFiles}" Name="mappingFilesListBox" Margin="5,0,5,0">
+                           <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <viennaaddin:InlineFileSelector Filename="{Binding Path=File, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="-2,0,0,0" DefaultExt=".xsd" Filter="XML Schema files (.xsd)|*.xsd" Height="30" />
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>-->
                     </DockPanel>
                 </TabItem.Content>
             </TabItem>
